--- a/2017-08-20.html
+++ b/2017-08-20.html
@@ -24,12 +24,11 @@
 	</style>
 	<body style="background-color: grey;">
 		<h1 id="center" style="color:green;">
-			&Oslash;&Dstrok;&Uuml;&AElig;&Yacute;&Ntilde;&Otilde;
+			Modify openssh on armv7 to log passwords attemps
 		</h1>
 		</br>
 
 		<div id="2017-08-20"> 
-			<a href="http://freccia.github.io/2017-08-20" id="2017-08-20">     Modify openssh on armv7 to log passwords attempts </a>
 		</div>
 
 		<footer id="footer" >
