archlinux.png ++ mod

--- a/2017-08-20.html
+++ b/2017-08-20.html
@@ -24,7 +24,7 @@
 	</style>
 	<body style="background-color: grey;">
 		<h1 id="center" style="color:green;">
-			Modify openssh on armv7 to log passwords attemps
+			Modify openssh on armv7 running ArchLinux to log passwords attemps
 		</h1>
 		</br>
 
