--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
 		} 
 
 	</style>
-	<body style="background-color: grey;">
-		<h1 id="center" style="color:green;">
-			&Oslash;&Dstrok;&Uuml;&AElig;&Yacute;&Ntilde;&Otilde;
+	<body style="background-color: #2b2b2b;">
+		<h1 id="center" style="color: #61b87e;">
+        &Oslash;&Dstrok;&Uuml;&AElig;&Yacute;&Ntilde;&Otilde;</br>
+        (freccia.github.io)
 		</h1>
 		</br>
 
+    <img src="resources/archlinux.png" id="archlinux"/> 
+
 		<div id="2017-08-20"> 
-			<a href="http://freccia.github.io/2017-08-20" id="2017-08-20">     Modify openssh on armv7 to log passwords attempts </a>
+			<a href="http://freccia.github.io/2017-08-20" id="2017-08-20">
+          Modify openssh on armv7 runnning ArchLinux to log passwords attempts </a>
 		</div>
 
 		<footer id="footer" >
