--- a/2017-08-20.html
+++ b/2017-08-20.html
@@ -6,7 +6,7 @@
 		</title>
 	</head>
 	<style>
-		#center {text-align: center;}
+		#title { text-align: center; margin-top: 25px }
 
 		#footer { position:absolute; width: 100%; bottom: 0; right: 0  }
 		#footer_text { font-family:"Courier New"; font-style:italic; text-align:right ; margin-right:5px}
@@ -22,10 +22,10 @@
 		} 
 
 	</style>
-	<body style="background-color: grey;">
-		<h1 id="center" style="color:green;">
+	<body style="background-color: #0b0b0b;">
+		<h2 id="title" style="color: #61b87e;">
 			Modify openssh on armv7 running ArchLinux to log passwords attemps
-		</h1>
+		</h2>
 		</br>
 
 		<div id="2017-08-20"> 
