--- a/2017-08-20.html
+++ b/2017-08-20.html
@@ -24,7 +24,7 @@
 	</style>
 	<body style="background-color: #0b0b0b;">
 		<h2 id="title" style="color: #61b87e;">
-			Modify openssh on armv7 running ArchLinux to log passwords attemps
+			Modify openssh on armv7 running ArchLinux to log login attemps
 		</h2>
 		</br>
 
