--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div id="list"> 
     		<div id="2017-08-20"> 
 	    		<a href="http://freccia.github.io/2017-08-20" id="2017-08-20">
-              2017-08-20 ::   Modify openssh on armv7 runnning ArchLinux to log passwords attempts </a>
+              2017-08-20 ::   Modify openssh on armv7 runnning ArchLinux to log login attempts </a>
 	     	</div>
 		</div>
     </center>
